--- a/showroom/roi-bau.ch/assets/css/main.css
+++ b/showroom/roi-bau.ch/assets/css/main.css
@@ -3234,9 +3234,9 @@ input, select, textarea {
 			width: 100%;
 			height: 100%;
 			background-color: #212931;
-			background-image: url("../../images/overlay.png"), linear-gradient(0deg, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url("../../images/bg.jpg");
+			background-image: url("./images/overlay.png"), linear-gradient(0deg, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url("./images/bg.jpg");
 			background-size: auto,								auto,														100% auto;
-			background-position: center,								center,														top center;
+			background-position: center, bottom,  66%;
 			background-repeat: repeat,								no-repeat,													no-repeat;
 			background-attachment: scroll,								scroll,														scroll;
 			z-index: -1;
@@ -3276,7 +3276,7 @@ input, select, textarea {
 		@media screen and (orientation: portrait) {
 
 			#wrapper > .bg {
-				background-size: auto,								auto,														auto 100%;
+				background-size: auto, auto, auto 100%;
 			}
 
 		}
