--- a/showroom/roi-bau.ch/assets/css/main.css
+++ b/showroom/roi-bau.ch/assets/css/main.css
@@ -3974,7 +3974,7 @@ input, select, textarea {
 
 			#footer a:hover {
 				border-bottom-color: transparent;
-				color: #18bfef !important;
+				color: #718093 !important;
 			}
 
 		#footer strong, #footer b {
