--- a/showroom/roi-bau.ch/assets/css/main.css
+++ b/showroom/roi-bau.ch/assets/css/main.css
@@ -4687,3 +4687,26 @@ input, select, textarea {
 		}
 
 	}
+
+*.map {
+	align-content: left;
+	margin: 0px;
+	width: 100%;
+	height: 100%;
+	background-color: rgb(113, 128, 147), 0.8;
+}
+
+.map {
+	overflow: hidden;
+	padding-bottom: 56.25%;
+	position: relative;
+	height: 0;
+}
+
+	.map iframe {
+		left: 0;
+		top: 0;
+		height: 100%;
+		width: 100%;
+		position: absolute;
+	}
